# apex_xauusd_engine

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml
config/: __init__.py  backtest_profiles.json  base_settings.py  live_profile.py  simulation_profile.py
data/: xauusd_m1.csv
deploy/: Dockerfile.app  Dockerfile.db  docker-compose.yml  prometheus.yml
docs/: architecture_spec.md  ict_smc_amd_model.md  ict_smc_asian_range_liquidity.md  ict_smc_backtesting.md  ict_smc_bearish_order_block.md  ict_smc_break_of_structure.md  ict_smc_breaker_block.md  ict_smc_bullish_order_block.md  ict_smc_change_of_character.md  ict_smc_dealing_range.md  ict_smc_displacement.md  ict_smc_draw_on_liquidity.md  ict_smc_entry_model.md  ict_smc_equal_highs_lows.md  ict_smc_fair_value_gap.md  ict_smc_false_positive_filter.md  ict_smc_imbalance.md  ict_smc_internal_external_liquidity.md  ict_smc_judas_swing.md  ict_smc_killzone.md  ict_smc_liquidity.md  ict_smc_liquidity_sweep.md  ict_smc_liquidity_to_liquidity.md  ict_smc_london_open_raid.md  ict_smc_market_structure.md  ict_smc_market_structure_shift.md  ict_smc_mitigation_block.md  ict_smc_multitimeframe_engine.md  ict_smc_new_york_open_raid.md  ict_smc_news_filter.md  ict_smc_order_block.md  ict_smc_point_of_interest.md  ict_smc_premium_discount.md  ict_smc_previous_day_liquidity.md  ict_smc_risk_management.md  ict_smc_session_liquidity.md  ict_smc_setup_scoring.md  ict_smc_silver_bullet.md  ict_smc_smt_divergence.md  ict_smc_stop_hunt_reversal.md  (+22 more)
reports/: __init__.py  candle_mapper.py  cross_verifier.py  data_loader.py  manual_chart_review.py  metrics_calculator.py  report_config.py  report_renderer.py  schema_validator.py  timestamp_normalizer.py  weekly_report_runner.py
(+304 files in other folders)
