[project]
name = "apex-xauusd-engine"
version = "1.0.0"
description = "Institutional-grade algorithmic execution engine specialized for high-frequency XAUUSD state modeling."
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9",
    "alembic>=1.13",
    "fastapi>=0.110",
    "MetaTrader5>=5.0.45; platform_system == 'Windows'",
    "numpy>=1.26",
    "pandas>=2.2",
    "prometheus-client>=0.20",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "structlog>=24.1",
    "uvicorn>=0.29",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 120
target-version = "py312"
select = ["E", "F", "W", "I", "N", "ASYNC"]
ignore = ["D100", "D104"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--strict-markers --tb=short --cov=src"
